0.70.3 ()
  * Upgrading to core 0.84.0
  * Nested write transactions are not supported, and an exception is thrown.
  * Javadoc updated
  * Fixed bug in RealmResults: https://github.com/realm/realm-java/issues/453

0.70.2 (03 Oct 2014)
  * Adding RealmQuery.count() method
  * Added a new example about concurrency
  * Simplified the release artifact to a single Jar file
  * Added support for Eclipse


0.70.1 (30 Sep 2014)
  * Enable unit testing for the realm project
  * Fixed handling of camel-cased field names

0.70.0 (29 Sep 2014)
  * This is the first public beta release