@@ -52,7 +52,7 @@ task generateJar(type: Jar, dependsOn: 'assemble') {
     description 'Generates a jar file continaining Realm and its annotation processor'
     from zipTree('build/intermediates/bundles/release/classes.jar')
     from zipTree("../realm-annotations-processor/build/libs/realm-annotations-processor-${version}.jar").matching {
-        exclude 'io/realm/annotations/Ignore.class', 'io/realm/annotations/RealmClass.class' // Avoid duplicates
+        exclude 'io/realm/annotations/Ignore.class', 'io/realm/annotations/RealmClass.class', 'io/realm/annotations/Index.class' // Avoid duplicates
     }
     from(file('src/main/jniLibs')) {
         into 'lib'
