@@ -3,6 +3,7 @@
   * Nested write transactions are not supported, and an exception is thrown.
   * Javadoc updated
   * Fixed bug in RealmResults: https://github.com/realm/realm-java/issues/453
+  * New annotation @Index to add search index to a field (currently only supporing String fields) 
 
 0.70.2 (03 Oct 2014)
   * Adding RealmQuery.count() method
